--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
   color: #FEF2BF;
 }
 
-.container {
+.main {
   display: block;
   width: 50%;
   margin: auto;
@@ -52,3 +52,8 @@ body {
   background-color: grey;
 }
 
+p {
+  font-family: 'Press Start 2P', cursive;
+  padding-top: 2.5rem;
+  font-size: 40px;
+}
